--- a/src/app/main/unit/detail-unit/detail-unit.component.html
+++ b/src/app/main/unit/detail-unit/detail-unit.component.html
@@ -1,18 +1,18 @@
 <div class="container-fluid">
     <div style="text-align: center; font-weight: bold">
-      <h3 style="color: #106DB6; font-family: inherit;">{{this.data.title}}</h3>
+      <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">{{this.data.title | translate}}</h3>
     </div>
     <div class="content">
         <div class="row">  
             <div class="col-md-6">  
-                <div class="label_item">Tên tổ chức</div>
+                <div class="label_item">{{'unit.name' | translate }}</div>
                 <div>
                     <div [innerHTML]="name" class="input_text"></div>
                 </div>
             </div>
         
             <div class="col-md-6">
-                <div class="label_item">Tên viết tắt</div>
+                <div class="label_item">{{'unit.short-name' | translate }}</div>
                 <div>
                     <div [innerHTML]="short_name" class="input_text"></div>
                 </div>
@@ -21,14 +21,14 @@
 
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
-                <div class="label_item">Mã tổ chức</div>
+                <div class="label_item">{{'unit.code' | translate }}</div>
                 <div>
                     <div [innerHTML]="code" class="input_text"></div>
                 </div>
             </div>
         
             <div class="col-md-6">
-                <div class="label_item">Địa chỉ email</div>
+                <div class="label_item">{{'unit.email' | translate }}</div>
                 <div>
                     <div [innerHTML]="email" class="input_text"></div>
                 </div>
@@ -37,14 +37,14 @@
 
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
-                <div class="label_item">Tổ chức cấp trên</div>
+                <div class="label_item">{{'unit.parent' | translate }}</div>
                 <div>
                     <div [innerHTML]="parent_id" class="input_text"></div>
                 </div>
             </div>
         
             <div class="col-md-6">
-                <div class="label_item">Số điện thoại</div>
+                <div class="label_item">{{'unit.phone' | translate }}</div>
                 <div>
                     <div [innerHTML]="phone" class="input_text"></div>
                 </div>
@@ -53,7 +53,7 @@
 
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
-                <div class="label_item">Fax</div>
+                <div class="label_item">{{'unit.fax' | translate }}</div>
                 <div>
                     <div [innerHTML]="fax" class="input_text"></div>
                 </div>
@@ -61,12 +61,12 @@
         
             <div class="col-md-6" style="align-self: center;">
                 <input type="radio" checked style="outline: none;">
-                <span> {{status==1?'Hoạt động':'Không hoạt động'}}</span>
+                <span> {{(status==1?'unit.active' : 'unit.inactive') | translate}}</span>
             </div>
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">Hủy</button>
+            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
         </div>
     </div>
   </div>
