--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
@@ -309,6 +309,24 @@ input[type=number] {
             width: 100%;
           }
 
+          .search-name {
+            display: flex;
+            position: absolute;
+            flex-direction: column;
+            background-color: white;
+            border: 1px solid #ddd;
+            width: 25%;
+            border-radius: 5px;
+            padding: 5px;
+            max-height: 190px;
+            overflow: auto;
+            cursor: pointer;
+
+            span:hover {
+              background-color: #dddddd94;
+            }
+          }
+
         }
       }
 
