add code search step 2

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -21,10 +21,11 @@
                 <div class="input-data">
                   <img src="assets/img/icon_name.svg" class="input-img">
 <!--                  <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name" autofocus>-->
-                  <input type="text" (ngxInputSearch)="doTheSearch($event, index)" [value]="d.name" (focusout)="onFocusOut($event)">
+<!--                  (focusout)="onFocusOut($event)"-->
+                  <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" (focusin)="onFocusIn($event, index, 'view')" (ngxInputSearch)="doTheSearch($event, index, 'view')" [(ngModel)]="d.name" (focusout)="onFocusOut($event)">
                 </div>
-                <div class="search-name" *ngIf="arrSearch[index] && this.arrSearchName && arrSearchName.length > 0">
-                  <span class="search-name-items" *ngFor="let t of this.arrSearchName" (click)="onSelectName(t, d)">{{t}}</span>
+                <div class="search-name" *ngIf="this.arrSearch[index] && this.arrSearchNameView && arrSearchNameView.length > 0">
+                  <button class="search-name-items" *ngFor="let t of this.arrSearchNameView" (click)="onSelectName(t, d)">{{t}}</button>
                 </div>
 
               </div>
@@ -60,8 +61,11 @@
                   <div class="label text-color">{{'user.name' | translate}}: <span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input #abcd [id]="'signature-origanzation-' + d.ordering" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
-                           [(ngModel)]="d.name">
+<!--                    <input [id]="'signature-origanzation-' + d.ordering" type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">-->
+                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" (focusin)="onFocusIn($event, index, 'signature')" (ngxInputSearch)="doTheSearch($event, index, 'signature')" [(ngModel)]="d.name" (focusout)="onFocusOut($event)">
+                  </div>
+                  <div class="search-name" *ngIf="this.arrSearch[index] && this.arrSearchNameSignature && arrSearchNameSignature.length > 0">
+                    <button class="search-name-items" *ngFor="let t of this.arrSearchNameSignature" (click)="onSelectName(t, d)">{{t}}</button>
                   </div>
                 </div>
 <!--                <div *ngIf="getOtp(d)" class="participants-otp" style="z-index: -1">-->
@@ -127,7 +131,11 @@
                   <div class="label text-color">{{'user.name' | translate}}: <span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">
+<!--                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">-->
+                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" (focusin)="onFocusIn($event, index, 'doc')" (ngxInputSearch)="doTheSearch($event, index, 'doc')" [(ngModel)]="d.name" (focusout)="onFocusOut($event)">
+                  </div>
+                  <div class="search-name" *ngIf="this.arrSearch[index] && this.arrSearchNameDoc && arrSearchNameDoc.length > 0">
+                    <button class="search-name-items" *ngFor="let t of this.arrSearchNameDoc" (click)="onSelectName(t, d)">{{t}}</button>
                   </div>
                 </div>
 <!--                <div class="participants-otp" style="z-index: -1">-->
