--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
@@ -129,5 +129,14 @@
     <button (click)="next()" style="width: 300px" type="button" name="next" class="next action-button pull-right">Xác nhận và gửi hợp đồng</button>
   </div>
 </div>
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-spin-clockwise"
+>
+  <p style="font-size: 18px; color: white">Đang xử lý...</p>
+</ngx-spinner>
+
 
 
