--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -7,7 +7,7 @@
       <div class="label_item">Họ tên: <span class="require_star">*</span></div>
       <div class="form-control input-line">
         <img src="assets/img/icon_name.svg" class="input-img">
-        <input autocomplete="off" type="text" formControlName="name" class="input-text" placeholder="Nhập họ và tên" autofocus>
+        <input style="width: 88%" autocomplete="off" type="text" formControlName="name" class="input-text" placeholder="Nhập họ và tên" autofocus>
       </div>
     </div>
 
@@ -15,7 +15,7 @@
       <div class="label_item">Email: <span class="require_star">*</span></div>
       <div class="form-control input-line">
         <img src="assets/img/login_email.svg" class="input-img">
-        <input autocomplete="off" type="text" formControlName="email" class="input-text" placeholder="Nhập Email">
+        <input style="width: 88%" autocomplete="off" type="text" formControlName="email" class="input-text" placeholder="Nhập Email">
       </div>
     </div>
 
