--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
@@ -217,6 +217,7 @@ input[type=number] {
   .contract--content {
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
 
   .contract__content--title {
