--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -104,3 +104,11 @@
     <button (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>
   </div>
 </div>
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-spin-clockwise"
+>
+  <p style="font-size: 18px; color: white">Đang xử lý...</p>
+</ngx-spinner>
