--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
@@ -199,40 +199,41 @@
           </div>
         </div>
         <div *ngIf="item.type == 2">
-<!--          <div class="participants-border">-->
-<!--            <div class="label">{{'user.lead' | translate}}</div>-->
-<!--            <div class="participants&#45;&#45;content" *ngFor="let d of getPartnerCoordination(item); let index = index">-->
-<!--              <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"-->
-<!--                     [(ngModel)]="d.ordering">-->
-<!--              <div class="col-md-10 participants&#45;&#45;input" style="display: flex; margin-bottom: 14px">-->
-<!--                <div class="participants__name">-->
-<!--                  <div class="label text-color">{{'user.name' | translate}}: <span class="required-title">*</span></div>-->
-<!--                  <div class="input-data">-->
-<!--                    <img src="assets/img/icon_name.svg" class="input-img">-->
-<!--                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">-->
-<!--                  </div>-->
+          <div class="participants-border">
+            <div class="label">{{'user.lead' | translate}}</div>
+            <div class="participants--content" *ngFor="let d of getPartnerCoordination(item); let index = index">
+              <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
+                     [(ngModel)]="d.ordering" disabled>
+              <div class="col-md-10 participants--input" style="display: flex; margin-bottom: 14px">
+                <div class="participants__name">
+                  <div class="label text-color">{{'user.name' | translate}}: <span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <img src="assets/img/icon_name.svg" class="input-img">
+                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name" disabled>
+                  </div>
+                </div>
+<!--                <div class="participants-otp" style="z-index: -1">-->
+<!--                  <input type="checkbox">-->
+<!--                  <span class="label text-color">OTP</span>-->
 <!--                </div>-->
-<!--&lt;!&ndash;                <div class="participants-otp" style="z-index: -1">&ndash;&gt;-->
-<!--&lt;!&ndash;                  <input type="checkbox">&ndash;&gt;-->
-<!--&lt;!&ndash;                  <span class="label text-color">OTP</span>&ndash;&gt;-->
-<!--&lt;!&ndash;                </div>&ndash;&gt;-->
-<!--                <div class="participants__name">-->
-<!--                  <div class="label text-color">Email: <span class="required-title">*</span></div>-->
-<!--                  <div class="input-data">-->
-<!--                    <img src="assets/img/login_email.svg" class="input-img">-->
-<!--                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
+                <div class="participants__name">
+                  <div class="label text-color">Email: <span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email" disabled>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-1 delete-element"></div>
 <!--              <div class="col-md-1 delete-element" (click)="deletePartnerCoordination(index, item, id)">-->
 <!--                <img src="assets/img/border_close.svg" alt="close.vn">-->
 <!--                <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">-->
 <!--              </div>-->
+            </div>
+<!--            <div class="participants--add">-->
+<!--              <u class="label text-color" (click)="addPartnerCoordination(item, id)">{{'btn.add.user.lead' | translate}}</u>-->
 <!--            </div>-->
-<!--&lt;!&ndash;            <div class="participants&#45;&#45;add">&ndash;&gt;-->
-<!--&lt;!&ndash;              <u class="label text-color" (click)="addPartnerCoordination(item, id)">{{'btn.add.user.lead' | translate}}</u>&ndash;&gt;-->
-<!--&lt;!&ndash;            </div>&ndash;&gt;-->
-<!--          </div>-->
+          </div>
 
           <div class="participants-border">
             <div class="label">{{'user.view' | translate}}</div>
