--- a/src/app/main/contract/dialog/share-contract-dialog/share-contract-dialog.component.html
+++ b/src/app/main/contract/dialog/share-contract-dialog/share-contract-dialog.component.html
@@ -2,15 +2,67 @@
     <div style="text-align: center; font-weight: bold">
       <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">{{this.datas.title | translate}}</h3>
     </div>
-    <form [formGroup]="addForm" class="content">
+
+    <div class="row">
+        <div class="radio col-md-6 label_type">
+          <label><input type="radio" name="type" [value]="1" [(ngModel)]="type"
+            (change)="changeType()">
+            <span> Chia sẻ qua email</span></label>
+        </div>
+        <div class="radio col-md-6 label_type">
+          <label><input type="radio" name="type" [value]="2" [(ngModel)]="type"
+            (change)="changeType()">
+            <span> Tìm người dùng trong hệ thống</span></label>
+        </div>
+    </div>
+
+    <form *ngIf="type==1" [formGroup]="addForm" class="content" >
         <div class="row">
+            <div class="col-md-12">
+                <div class="label text-color">Email <span class="required-title">*</span></div>
+                <div class="input-data">
+                    <input type="text" formControlName="email" autofocus>
+                </div>
+                <div *ngIf="submitted && f.email.errors" class="invalid">
+                    <div *ngIf="f.email.errors.required">Email không được để trống</div>
+                </div>
+            </div>
+        </div>
+    
+        <div class="row" style="justify-content: center;padding-top: 10px;">
+            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
+            <button class="save-button" (click)="onSubmit()">{{'btn.save' | translate}}</button>
+        </div>
+    </form>
+
+    <form *ngIf="type==2" [formGroup]="addFormUser" class="content" >
+        <div class="row">
+            <div class="col-md-12">
+                <div class="label text-color">Tổ chức</div>
+                <div>
+                    <p-dropdown 
+                        panelStyleClass="font"
+                        appendTo="body"
+                        [options]="orgList" 
+                        formControlName="orgId" 
+                        optionLabel="name" 
+                        optionValue="id" 
+                        placeholder="Chọn tổ chức" 
+                        [filter]="true" 
+                        filterBy="name" 
+                        [showClear]="true"  
+                        ></p-dropdown>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="padding-top: 10px;">
             <div class="col-md-12">
                 <div class="label text-color">Email <span class="required-title">*</span></div>
                 <div class="input-data">
                     <input type="text" formControlName="email">
                 </div>
-                <div *ngIf="submitted && f.email.errors" class="invalid">
-                    <div *ngIf="f.email.errors.required">Email không được để trống</div>
+                <div *ngIf="submittedUser && fUser.email.errors" class="invalid">
+                    <div *ngIf="fUser.email.errors.required">Email không được để trống</div>
                 </div>
             </div>
         </div>
