--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
@@ -198,6 +198,9 @@ button {
   .p-dropdown-label, .p-multiselect-label {
       padding: 7px 7px 5px 10px;
   }
+  .p-multiselect .p-multiselect-label.p-placeholder, .p-dropdown .p-dropdown-label.p-placeholder {
+    color: #6c757d !important;
+  }
 }
 .invalid{
   color: red;
