--- a/src/app/main/contract/dialog/share-contract-dialog/share-contract-dialog.component.html
+++ b/src/app/main/contract/dialog/share-contract-dialog/share-contract-dialog.component.html
@@ -20,8 +20,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="label text-color">Email <span class="required-title">*</span></div>
-                <div class="input-data">
-                    <input type="text" formControlName="email" autofocus>
+                <div>
+                    <p-chips styleClass="font" type="text" formControlName="email" separator="," placeholder="Email ngăn cách và kết thúc bởi dấu ,"></p-chips>
                 </div>
                 <div *ngIf="submitted && f.email.errors" class="invalid">
                     <div *ngIf="f.email.errors.required">Email không được để trống</div>
@@ -51,6 +51,8 @@
                         [filter]="true" 
                         filterBy="name" 
                         [showClear]="true"  
+                        (onChange)="getUserByOrg(orgId.value)"
+                        #orgId
                         ></p-dropdown>
                 </div>
             </div>
@@ -58,8 +60,19 @@
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-12">
                 <div class="label text-color">Email <span class="required-title">*</span></div>
-                <div class="input-data">
-                    <input type="text" formControlName="email">
+                <div>
+                    <p-multiSelect 
+                        panelStyleClass="font"
+                        appendTo="body"
+                        [options]="userList" 
+                        formControlName="email" 
+                        optionLabel="email" 
+                        optionValue="email" 
+                        placeholder="Chọn email" 
+                        [filter]="true" 
+                        filterBy="email" 
+                        [showClear]="true"  
+                        ></p-multiSelect>
                 </div>
                 <div *ngIf="submittedUser && fUser.email.errors" class="invalid">
                     <div *ngIf="fUser.email.errors.required">Email không được để trống</div>
