--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans
   font-weight:normal;
   font-style:normal;
 }
-.font, .p-inputtext, .p-component{
+.font, .p-inputtext, .p-component, .p-chips-input-token input{
   font-size: 13px !important;
   font-family: font_lexend_deca !important;
 }
