--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,7 @@
 <div class="page-wrapper" [ngClass]="{'toggled' : getSideBarState()}">
   <app-sidebar *ngIf="getShowHideSideBar()" (evenSelectSidebar)="getName($event)"></app-sidebar>
-  <main class="page-content" [ngStyle]="getStyleWithSideBar()" style="padding-bottom: 25px;">
+  <main class="page-content" [ngStyle]="getStyleWithSideBar()" [style.padding-bottom]="this.isShowCopyRight && this.isRouterContractNew ? '25px' : ''">
+<!--    style="padding-bottom: 25px;"-->
       <header [ngStyle]="getStyleSideBar()">
         <div class="search-wrapper">
           <h3>{{title | translate}}</h3>
@@ -76,7 +77,7 @@
           </div>
         </div>
       </div>
-      
+
   </main>
   <div *ngIf="this.isShowCopyRight && this.isRouterContractNew" class="content_footer">
     <div>@Copyright 2021 - MobiFone</div>
