--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
@@ -325,11 +325,11 @@
 <!--                  </div>-->
                 </div>
               </div>
-              <div class="col-md-1 delete-element" (click)="deletePartnerSignature(index, item)">
+              <div *ngIf="getPartnerSignature(item).length > 1" class="col-md-1 delete-element" (click)="deletePartnerSignature(index, item)">
                 <img src="assets/img/border_close.svg" alt="close.vn">
                 <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
               </div>
-<!--              <div *ngIf="getPartnerSignature(item).length == 1" class="col-md-1 delete-element"></div>-->
+              <div *ngIf="getPartnerSignature(item).length == 1" class="col-md-1 delete-element"></div>
             </div>
             <div class="participants--add">
               <u class="label text-color" style="color: #106DB6" (click)="addPartnerSignature(item, id)">{{'btn.add.user.sign' | translate}}</u>
