--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -5,12 +5,12 @@
 <!--      !this.datas.coordination_complete && !view-->
       <button *ngIf="!this.is_show_coordination && !view" type="button" name="next" class="next action-button" (click)="processingAuthorization()">Ủy quyền</button>
       <button *ngIf="!this.is_show_coordination && !view" type="button" name="next" class="next action-button" (click)="forWardContract()">Chuyển tiếp</button>
+      <button class="next action-button" (click)="showSignature()">Chữ ký</button>
     </div>
     <div class="label">
 <!--      <button type="button" name="next" class="next action-button" *ngIf="view" (click)="downloadFilePDF()">Tải file</button>-->
       <button *ngIf="!this.is_show_coordination && ![2,3,4].includes(this.datas.roleContractReceived) && !view" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Từ chối</button>
       <button *ngIf="!this.is_show_coordination && !view" (click)="action()" type="button" name="next" class="next action-button">{{this.datas.action_title == 'dieu_phoi' ? 'Điều phối' : 'Xác nhận'}}</button>
-
     </div>
   </div>
 <!--  <div>-->
