--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -1,18 +1,19 @@
 <div class="container-fluid">
 
-  <div class="signature-container" id="export-html" style="width: 395px; height: 72px; border: 1px solid #ddd; display: flex">
-    <img style="z-index: 1; opacity: 0.4" src="assets/img/chu_e.svg" alt="duongdt.vn">
-    <table style="z-index: 2; color: #4FC123">
+  <div class="signature-container" id="export-html"
+       style="background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 44px 52px; width: 295px; border: 1px solid #ddd; display: flex; font-size: 11px">
+<!--    <img style="z-index: 1; opacity: 0.4" src="assets/img/chu_e.svg" alt="duongdt.vn">-->
+    <table style="color: #4FC123; line-height: 1.5">
       <tr style="display: flex">
-        <td id="ky-boi" style="padding-right: 5px">Ký bởi:</td>
-        <td id="ten-nguoi-ky" style="width: 250px">Công ty cổ phần phần mềm công nghệ cao Việt Nam</td>
+        <td id="ky-boi" style="width: 55px">Ký bởi:</td>
+        <td id="ten-nguoi-ky" style="width: 186px">Công ty cổ phần phần mềm công nghệ cao Việt Nam</td>
       </tr>
       <tr style="display: flex">
-        <td style="padding-right: 5px">Ngày ký:</td>
-        <td id="date-time-signature" style="width: 250px">{{this.isDateTime | date: 'dd/MM/YYYY HH:mm'}}</td>
+        <td style="width: 55px">Ngày ký:</td>
+        <td id="date-time-signature" style="width: 186px">{{this.isDateTime | date: 'dd/MM/YYYY HH:mm'}}</td>
       </tr>
     </table>
-    <img style="z-index: 2;" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+    <img src="assets/img/tick_signature.svg" alt="duongdt.vn">
   </div>
 
   <div style="margin-top: 26px; display: flex; justify-content: flex-end">
