--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -147,7 +147,7 @@ h3{
   text-align: center;
   color:#0160AE;
   font-weight: 500;
-  width: 100%;
+  width: calc(100% - 220px);
   height: 25px;
   padding: 3px;
   bottom: 0;
