--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="form-group" style="text-align: center;">
-              <button (click)="sendForgetPassword(); error ? false : open(mymodal)" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">{{'btn.sendRequest' | translate}}</button>
+              <button (click)="sendForgetPassword()" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">{{'btn.sendRequest' | translate}}</button>
             </div>
           </form>
         </div>
@@ -68,30 +68,3 @@
     </div>
   </div>
 </body>
-
-<!-- Popup notification send email -->
-<ng-template #mymodal let-modal >
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="modal-header" style="align-items: start; height: 50px;">
-          <h3>THÔNG BÁO</h3>
-          <button type="button" class="close" (click)="modal.dismiss('Cross click')" style="border: none;background: none;">
-            <span style="font-size: 25px;">×</span>
-          </button>
-        </div>
-
-          <div class="form-group">
-            <div class="input-group">
-              <p class="alert" role="alert"  [ngClass]="{'alert-danger' : status==0, 'alert-primary' : status==1}" style="text-align: center;">
-              {{notification}}
-            </p>
-            </div>
-          </div>
-          <div class="form-group" style="text-align: center; padding-top: 30px;">
-            <button (click)="modal.dismiss('Cross click');" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">Đồng ý</button>
-          </div>
-      </div>
-    </div>
-  </div>
-</ng-template>
