--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -6,7 +6,7 @@
     <table style="color: #4FC123; line-height: 1.5">
       <tr style="display: flex">
         <td id="ky-boi" style="width: 55px">Ký bởi:</td>
-        <td id="ten-nguoi-ky" style="width: 186px">Công ty cổ phần phần mềm công nghệ cao Việt Nam</td>
+        <td id="ten-nguoi-ky" style="width: 186px">{{this.isNameSignature}}</td>
       </tr>
       <tr style="display: flex">
         <td style="width: 55px">Ngày ký:</td>
