--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
@@ -170,7 +170,7 @@
                [ngClass]="changeColorDrag(null, true)"
                [ngStyle]="changePosition(d)">
             <div class="name-sig-img-daky">{{(d.name && !d.value) ? d.name : ''}}</div>
-            <app-image-sign-contract *ngIf="!view" [datas]="datas" [view]="view" [sign]="d"></app-image-sign-contract>
+            <app-image-sign-contract *ngIf="!view" [datas]="datas" [view]="true" [sign]="d"></app-image-sign-contract>
           </div>
         </div>
       </div>
