add file plugin

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -30,6 +30,16 @@
                   <div>{{'document.user.use' | translate }}</div></div>
                 </a>
               </button>
+
+              <button ngbDropdownItem class="drop">
+                <a href="/assets/upload/mobi_pki_sign_setup.zip" style="color: inherit; text-decoration: none;"> 
+                <div style="display: flex; align-items: center;">
+                  <div class="db_user">
+                    <div class="db_document_use"></div> 
+                  </div>
+                  <div>{{'document.plugin.pki' | translate }}</div></div>
+                </a>
+              </button>
             </div>
           </div>
 
