--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -61,7 +61,7 @@
           </div>
        </div>
        <div class="col-md-4">
-        <div class="label text-color">Vai trò <span class="required-title">*</span></div>
+        <div class="label text-color">{{'menu.role.list' | translate}} <span class="required-title">*</span></div>
         <div>
          <p-dropdown 
          panelStyleClass="font"
@@ -83,11 +83,11 @@
      <div class="row">
       <div class="col-md-2">
           <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
-          <span> Hoạt động</span>
+          <span> {{'unit.active' | translate}}</span>
       </div>
       <div class="col-md-2">
           <input type="radio" name='confirm-radio-consider' [value]="0" formControlName="status" name="status">
-          <span> Không hoạt động</span>
+          <span> {{'unit.inactive' | translate}}</span>
       </div>
   </div>
    </div>
@@ -175,8 +175,8 @@
    </div>
 
    <div class="row" style="justify-content: center;padding-top: 10px;">
-    <button class="cancel-button" (click)="onCancel()" type="button">Hủy</button>
-    <button class="save-button" (click)="onSubmit()">Lưu lại</button>
+    <button class="cancel-button" (click)="onCancel()" type="button">{{'btn.cancel' | translate}}</button>
+    <button class="save-button" (click)="onSubmit()">{{'btn.save' | translate}}</button>
   </div>
   </form>
    
