--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -45,7 +45,7 @@
      <div class="row">
         <div class="col-md-6" style="align-self: center;">
             <input type="radio" checked style="outline: none;">
-            <span> {{status==1?'Hoạt động':'Không hoạt động'}}</span>
+            <span> {{(status==1?'unit.active':'unit.inactive') | translate}}</span>
         </div>
   </div>
    </div>
@@ -119,7 +119,7 @@
     </div>
 
     <div class="row" style="justify-content: center;padding-top: 10px;">
-        <button class="cancel-button" (click)="onCancel()"  type="button">Hủy</button>
+        <button class="cancel-button" (click)="onCancel()"  type="button">{{'btn.cancel' | translate}}</button>
     </div>
 </div>
    
